--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>React Product App</title>
+    <title>Warehouse React App</title>
   </head>
   <body>
     <div id="root"></div>
